hphp/hack/test/typecheck/expression_trees/splice_err2.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $x = Code`'Hello'`;

  // Inferred type needs to be compatible
  $y = Code`4 + ${$x}`;
}
